--- a/KNN/knn.ipynb
+++ b/KNN/knn.ipynb
@@ -559,7 +559,9 @@
    "source": [
     "We now have all the elements of the algorithm and we can tie them together with a main function.\n",
     "\n",
-    "Below is the complete example of implementing the kNN algorithm from scratch in Python."
+    "Below is the example of implementing the kNN algorithm from scratch in Python.\n",
+    "\n",
+    "Group Activity: You need to finish the TODO section."
    ]
   },
   {
@@ -690,11 +692,9 @@
     "\t# generate predictions\n",
     "\tpredictions=[]\n",
     "\tk = 3\n",
-    "\tfor x in range(len(testSet)):\n",
-    "\t\tneighbors = getNeighbors(trainingSet, testSet[x], k)\n",
-    "\t\tresult = getResponse(neighbors)\n",
-    "\t\tpredictions.append(result)\n",
-    "\t\tprint('> predicted=' + repr(result) + ', actual=' + repr(testSet[x][-1]))\n",
+    "\t# TODO starts here\n",
+    "    # /////////////\n",
+    "    # TODO ends here\n",
     "\taccuracy = getAccuracy(testSet, predictions)\n",
     "\tprint('Accuracy: ' + repr(accuracy) + '%')\n",
     "\t\n",
