--- a/curse_of_demensionality/curse_dimensionality.ipynb
+++ b/curse_of_demensionality/curse_dimensionality.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,13 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
       "[ 4  5  6  7  8  9 10 11 12 13 14]\n",
       "[1.         2.         3.14159265 4.1887902  4.9348022  5.26378901\n",
       " 5.16771278 4.72476597 4.05871213 3.2985089  2.55016404 1.88410388\n",
@@ -185,21 +186,22 @@
     "# volume of n-spheres of radius R\n",
     "dims = np.arange(15)\n",
     "R = 1.0\n",
-    "S_n = [1,\n",
-    "       2 * R,\n",
-    "       np.pi * R**2,\n",
-    "       4.0/3.0 * np.pi * R**3]\n",
+    "S_n = [1, # 0 dim\n",
+    "       2 * R, # 1 dim\n",
+    "       np.pi * R**2, # 2 dim\n",
+    "       4.0/3.0 * np.pi * R**3] # 3 dim\n",
     "# calculate volumn for n = 4, 5, ... 15\n",
     "for n in dims[4:]:\n",
     "    S_n.append((2 * np.pi * R**2 / float(n)) * S_n[n - 2])\n",
     "S_n = np.array(S_n)\n",
+    "print dims\n",
     "print dims[4:]\n",
     "print S_n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +210,8 @@
      "text": [
       "[1.0000e+00 2.0000e+00 4.0000e+00 8.0000e+00 1.6000e+01 3.2000e+01\n",
       " 6.4000e+01 1.2800e+02 2.5600e+02 5.1200e+02 1.0240e+03 2.0480e+03\n",
-      " 4.0960e+03 8.1920e+03 1.6384e+04]\n"
+      " 4.0960e+03 8.1920e+03 1.6384e+04]\n",
+      "[2, 4, 6, 8, 10]\n"
      ]
     }
    ],
@@ -216,21 +219,24 @@
     "# volume of hypercubes of edge length 2*R\n",
     "# changing radius from R to 2*R\n",
     "C_n = np.array([(2*R)**n for n in dims])\n",
-    "print C_n"
+    "print C_n\n",
+    "# how [n for n in list]\n",
+    "a_list = [1,2,3,4,5]\n",
+    "print [a*2 for a in a_list]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f582c58b910>"
+       "<matplotlib.legend.Legend at 0x7fd70afe2e90>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -248,6 +254,7 @@
     }
    ],
    "source": [
+    "# figsize inches\n",
     "pl.figure(figsize=(12, 3))\n",
     "\n",
     "# 1x1 grid, first subplot\n",
