--- a/K-Means/Group Activity 4.ipynb
+++ b/K-Means/Group Activity 4.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "from sklearn.cluster import KMeans\n",
+    "# include functions to measure machine learning models' performance\n",
     "from sklearn import metrics\n",
     "from scipy.spatial.distance import cdist\n",
     "import numpy as np\n",
