--- a/HW_linear_regression/HW_1.ipynb
+++ b/HW_linear_regression/HW_1.ipynb
@@ -177,7 +177,9 @@
     "    \n",
     "    # Your code\n",
     "    # round function can round numbers to the nearest whole number\n",
-    "    # groupby \n",
+    "    # use .round() function\n",
+    "    # generate average grades for the same round-study-hours\n",
+    "    # hint use groupby and mean function \n",
     "    \n",
     "    \n",
     "\n"
@@ -290,7 +292,15 @@
     "    # Your code\n",
     "    # groupby grade, .value\n",
     "    # vstack merges a column containing only ones with x\n",
-    "    \n"
+    "    avg_data = get_averages(data)\n",
+    "    x = avg_data.index.values\n",
+    "    # groupby grade, .value\n",
+    "    y = avg_data.values\n",
+    "    # vstack merges a column containing only ones with x\n",
+    "    A = np.vstack([x, np.ones(len(x))]).T\n",
+    "    # least-squares solution to a linear matrix equation.\n",
+    "    w1, w0 = np.linalg.lstsq(A, y, rcond=None)[0]\n",
+    "    return np.array([w0[0],w1[0]])\n"
    ]
   },
   {
@@ -450,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression to the Mean"
+    "# Homework: Regression to the Mean"
    ]
   },
   {
