--- a/Linear_regression/Correlation_sample_code.ipynb
+++ b/Linear_regression/Correlation_sample_code.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "Text(0.5,1.05,'Correlation Matrix')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -73,6 +73,7 @@
    "source": [
     "# calculate the covariance between two variables\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# load data\n",
     "df = pd.read_csv('iris.data','rb', delimiter=',')\n",
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
        "Text(0.5,1.05,'Pearson Correlation Matrix')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +195,7 @@
        "Text(0.5,1.05,'Spearman Correlation Matrix')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
