--- a/Evaluation/ROC.ipynb
+++ b/Evaluation/ROC.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# ROC Example\n",
     "\n",
-    "\n",
+    "Code is based on: https://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html\n",
     "First we need to import libraries and prepare data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,9 @@
       " [1 0 0]\n",
       " [1 0 0]\n",
       " [1 0 0]]\n",
+      "[[1 4]\n",
+      " [2 5]\n",
+      " [3 6]]\n",
       "[[-0.76301132 -0.36482547  0.12386354]\n",
       " [-0.20224493 -0.63144366 -0.16612302]\n",
       " [ 0.11801481 -0.80263073 -0.32055874]\n",
@@ -80,10 +83,19 @@
     "\n",
     "# Add noisy features to make the problem harder\n",
     "random_state = np.random.RandomState(0)\n",
+    "# because X.shape is (150, 4)\n",
+    "# n_samples = 150, n_features = 4\n",
     "n_samples, n_features = X.shape\n",
+    "\n",
+    "# example about np.c_\n",
+    "# combine two matrices\n",
+    "print(np.c_[np.array([1,2,3]), np.array([4,5,6])])\n",
     "X = np.c_[X, random_state.randn(n_samples, 200 * n_features)]\n",
     "\n",
+    "\n",
+    "\n",
     "# shuffle and split training and test sets\n",
+    "# test_size = 0.5 means 50% for testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.5,\n",
     "                                                    random_state=0)\n",
     "\n",
@@ -94,6 +106,7 @@
     "# similar to K-means, sample distance to centroids\n",
     "y_score = classifier.fit(X_train, y_train).decision_function(X_test)\n",
     "\n",
+    "# we have three possible classes, therefore three distances for each data point\n",
     "print(y_score[:5])"
    ]
   },
@@ -106,15 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.         0.         0.         0.01960784 0.01960784]\n",
-      "[0.         0.         0.         0.00666667 0.00666667]\n"
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[1 2 3 4 5 6]\n"
      ]
     }
    ],
@@ -124,15 +138,21 @@
     "tpr = dict()\n",
     "roc_auc = dict()\n",
     "for i in range(n_classes):\n",
+    "    # roc_curve return three things: fpr, tpr, and thresholds used to calcualte fpr and tpr\n",
     "    fpr[i], tpr[i], _ = roc_curve(y_test[:, i], y_score[:, i])\n",
     "    roc_auc[i] = auc(fpr[i], tpr[i])\n",
     "\n",
     "# Compute micro-average ROC curve and ROC area\n",
+    "# if you suspect there may be inbalance in your dataset, i.e., one class may have\n",
+    "# more data examples, you should use micro-average\n",
     "fpr[\"micro\"], tpr[\"micro\"], _ = roc_curve(y_test.ravel(), y_score.ravel())\n",
     "roc_auc[\"micro\"] = auc(fpr[\"micro\"], tpr[\"micro\"])\n",
     "\n",
-    "print(fpr[2][:5])\n",
-    "print(fpr['micro'][:5])\n"
+    "# how ravel() works: \n",
+    "# return a contiguous flattened array\n",
+    "m = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(m)\n",
+    "print(np.ravel(m))"
    ]
   },
   {
@@ -195,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +233,15 @@
    ],
    "source": [
     "# Compute macro-average ROC curve and ROC area\n",
-    "\n",
+    "lw = 2\n",
     "# First aggregate all false positive rates\n",
+    "# np.unique remove repeat elements\n",
     "all_fpr = np.unique(np.concatenate([fpr[i] for i in range(n_classes)]))\n",
     "\n",
     "# Then interpolate all ROC curves at this points\n",
     "mean_tpr = np.zeros_like(all_fpr)\n",
     "for i in range(n_classes):\n",
+    "    # predict mean tpr based on linear relation between fpr and tpr\n",
     "    mean_tpr += interp(all_fpr, fpr[i], tpr[i])\n",
     "\n",
     "# Finally average it and compute AUC\n",
