--- a/Evaluation/Model Validation.ipynb
+++ b/Evaluation/Model Validation.ipynb
@@ -16,6 +16,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Metrics for Evaluation\n",
+    "\n",
+    "R^2, MSE, RMSE, MAE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9486081370449679 0.375 0.6123724356957945 0.5\n",
+      "0.9382566585956417 [0.41666667 1.        ] [0.5 1. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from math import sqrt\n",
+    "\n",
+    "y_true = [3, -0.5, 2, 7]\n",
+    "y_pred = [2.5, 0.0, 2, 8]\n",
+    "r2_1 = r2_score(y_true, y_pred)\n",
+    "mse_1 = mean_squared_error(y_true, y_pred)\n",
+    "# sklearn does not have a function to calculate rmse directly\n",
+    "rmse_1 = sqrt(mse_1)\n",
+    "mae_1 = mean_absolute_error(y_true, y_pred)\n",
+    "print(r2_1, mse_1, rmse_1, mae_1)\n",
+    "\n",
+    "# [n_samples, n_outputs], n_outputs are weights\n",
+    "y_true = [[0.5, 1], [-1, 1], [7, -6]]\n",
+    "y_pred = [[0, 2], [-1, 2], [8, -5]]\n",
+    "r2_2 = r2_score(y_true, y_pred,\n",
+    "          multioutput='variance_weighted') \n",
+    "# \n",
+    "mse_2 = mean_squared_error(y_true, y_pred, multioutput='raw_values')  \n",
+    "# rmse_2 = sqrt(mse_2)\n",
+    "mae_2 = mean_absolute_error(y_true, y_pred, multioutput='raw_values')\n",
+    "print(r2_2, mse_2, mae_2)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Thinking about Model Validation\n",
     "\n",
     "In principle, model validation is very simple: after choosing a model and its hyperparameters, we can estimate how effective it is by applying it to some of the training data and comparing the prediction to the known value.\n",
@@ -37,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,6 +160,9 @@
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
+    "# classification score\n",
+    "# In multilabel classification, this function computes subset accuracy: \n",
+    "# the set of labels predicted for a sample must exactly match the corresponding set of labels in y_true.\n",
     "accuracy_score(y, y_model)"
    ]
   },
