--- a/SVM/SVM.ipynb
+++ b/SVM/SVM.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,6 +760,14 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.pipeline import make_pipeline\n",
     "\n",
+    "# the sklearn PCA is not totally the same as what we have learned\n",
+    "# sklearn PCA can reply on some random numbers to conduct PCA\n",
+    "# on sparse data.\n",
+    "# if whiten is true: components_ vectors are multiplied by the square root of \n",
+    "# n_samples and then divided by the singular values to ensure uncorrelated outputs \n",
+    "# with unit component-wise variances.\n",
+    "# This can help to make the features less correlated with each other, \n",
+    "# and (ii) the features all have close variance.\n",
     "pca = PCA(n_components=150, whiten=True, random_state=42)\n",
     "svc = SVC(kernel='rbf', class_weight='balanced')\n",
     "model = make_pipeline(pca, svc)"
@@ -774,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -808,8 +816,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.3 s, sys: 11 s, total: 35.3 s\n",
-      "Wall time: 22.3 s\n",
+      "CPU times: user 23.7 s, sys: 9.66 s, total: 33.3 s\n",
+      "Wall time: 19.6 s\n",
       "{'svc__C': 10, 'svc__gamma': 0.001}\n"
      ]
     }
@@ -836,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +881,7 @@
     "    axi.imshow(Xtest[i].reshape(62, 47), cmap='bone')\n",
     "    axi.set(xticks=[], yticks=[])\n",
     "    axi.set_ylabel(faces.target_names[yfit[i]].split()[-1],\n",
-    "                   # if correct prediction\n",
+    "                   # if correct prediction color black, if not red\n",
     "                   color='black' if yfit[i] == ytest[i] else 'red')\n",
     "fig.suptitle('Predicted Names; Incorrect Labels in Red', size=14);"
    ]
@@ -889,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
