--- a/SVM/Group Activity 8.ipynb
+++ b/SVM/Group Activity 8.ipynb
@@ -32,13 +32,13 @@
     "\n",
     "np.random.seed(5)\n",
     "\n",
-    "centers = [[1, 1], [-1, -1], [1, -1]]\n",
+    "# centers = [[1, 1], [-1, -1], [1, -1]]\n",
     "iris = datasets.load_iris()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,8 @@
       " [4.9 3.  1.4 0.2]\n",
       " [4.7 3.2 1.3 0.2]\n",
       " [4.6 3.1 1.5 0.2]\n",
-      " [5.  3.6 1.4 0.2]]\n"
+      " [5.  3.6 1.4 0.2]]\n",
+      "(150, 4)\n"
      ]
     },
     {
@@ -106,17 +107,18 @@
     }
    ],
    "source": [
-    "print(X[:5])\n",
-    "\n",
     "X = iris.data\n",
     "y = iris.target\n",
     "\n",
+    "\n",
+    "print(X[:5])\n",
+    "print(X.shape)\n",
     "vis(X,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -139,20 +141,24 @@
     "# TODO\n",
     "# PCA, three dimensionality\n",
     "\n",
+    "\n",
     "vis(X,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(150, 2)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<matplotlib.collections.PathCollection at 0x7fe176042a20>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
