--- a/Genetic Algorithm/TSP.ipynb
+++ b/Genetic Algorithm/TSP.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial distance: 1731.1280809291554\n",
+      "Initial distance: 1957.179839461471\n",
       "Finished\n",
-      "Final distance: 1028.7972195300363\n",
+      "Final distance: 1014.149559885845\n",
       "Solution:\n",
-      "|20, 40|20, 20|60, 20|100, 40|120, 80|200, 160|180, 200|140, 180|140, 140|180, 100|180, 60|200, 40|160, 20|40, 120|20, 160|60, 200|80, 180|100, 160|100, 120|60, 80|\n"
+      "|40, 120|20, 160|60, 200|80, 180|100, 160|140, 140|140, 180|180, 200|200, 160|180, 100|120, 80|100, 40|60, 20|20, 20|20, 40|60, 80|160, 20|200, 40|180, 60|100, 120|\n"
      ]
     }
    ],
@@ -22,6 +22,7 @@
     "The code is found at https://gist.github.com/turbofart/3428880\n",
     "This Python code is based on Java code by Lee Jacobson.\n",
     "I modified the code for educaiton.\n",
+    "Here is a related tutorial at: https://towardsdatascience.com/evolution-of-a-salesman-a-complete-genetic-algorithm-tutorial-for-python-6fe5d2b3ca35\n",
     "\"\"\"\n",
     "\n",
     "import math\n",
@@ -30,6 +31,7 @@
     "\n",
     "class City:\n",
     "   def __init__(self, x=None, y=None):\n",
+    "      # coordinates\n",
     "      self.x = None\n",
     "      self.y = None\n",
     "      if x is not None:\n",
@@ -48,22 +50,26 @@
     "      return self.y\n",
     "   \n",
     "   def distanceTo(self, city):\n",
+    "      # euler distance\n",
     "      xDistance = abs(self.getX() - city.getX())\n",
     "      yDistance = abs(self.getY() - city.getY())\n",
     "      distance = math.sqrt( (xDistance*xDistance) + (yDistance*yDistance) )\n",
     "      return distance\n",
     "   \n",
     "   def __repr__(self):\n",
+    "      # when you print the city, it will only show you the x and y coordinates\n",
     "      return str(self.getX()) + \", \" + str(self.getY())\n",
     "\n",
     "\n",
     "class TourManager:\n",
+    "   # this list will record our path \n",
     "   destinationCities = []\n",
     "   \n",
     "   def addCity(self, city):\n",
     "      self.destinationCities.append(city)\n",
     "   \n",
     "   def getCity(self, index):\n",
+    "      # return the coordinates of the correpsonding index city  \n",
     "      return self.destinationCities[index]\n",
     "   \n",
     "   def numberOfCities(self):\n",
@@ -92,12 +98,16 @@
     "      self.tour[key] = value\n",
     "   \n",
     "   def __repr__(self):\n",
+    "      # this function shows how to display a tour\n",
+    "      # just print the city and separate cities with |\n",
     "      geneString = \"|\"\n",
     "      for i in range(0, self.tourSize()):\n",
     "         geneString += str(self.getCity(i)) + \"|\"\n",
     "      return geneString\n",
     "   \n",
     "   def generateIndividual(self):\n",
+    "      # in this program, the author shuffle the index\n",
+    "      # to make sure no city is missing  \n",
     "      for cityIndex in range(0, self.tourmanager.numberOfCities()):\n",
     "         self.setCity(cityIndex, self.tourmanager.getCity(cityIndex))\n",
     "      random.shuffle(self.tour)\n",
@@ -111,11 +121,14 @@
     "      self.distance = 0\n",
     "   \n",
     "   def getFitness(self):\n",
+    "      # fitness is 1/total distance  \n",
     "      if self.fitness == 0:\n",
     "         self.fitness = 1/float(self.getDistance())\n",
     "      return self.fitness\n",
     "   \n",
     "   def getDistance(self):\n",
+    "      # this function calculate distances between current city\n",
+    "      # next city in the tour  \n",
     "      if self.distance == 0:\n",
     "         tourDistance = 0\n",
     "         for cityIndex in range(0, self.tourSize()):\n",
@@ -145,6 +158,7 @@
     "      if initialise:\n",
     "         for i in range(0, populationSize):\n",
     "            newTour = Tour(tourmanager)\n",
+    "            # In the initalization step, randomly generate N individuals\n",
     "            newTour.generateIndividual()\n",
     "            self.saveTour(i, newTour)\n",
     "      \n",
@@ -159,7 +173,9 @@
     "   \n",
     "   def getTour(self, index):\n",
     "      return self.tours[index]\n",
-    "   \n",
+    "\n",
+    "   # this function can return fitness value for\n",
+    "   # each individual in the population \n",
     "   def getFittest(self):\n",
     "      fittest = self.tours[0]\n",
     "      for i in range(0, self.populationSize()):\n",
@@ -188,10 +204,12 @@
     "      for i in range(elitismOffset, newPopulation.populationSize()):\n",
     "         parent1 = self.tournamentSelection(pop)\n",
     "         parent2 = self.tournamentSelection(pop)\n",
+    "         # crossover   \n",
     "         child = self.crossover(parent1, parent2)\n",
     "         newPopulation.saveTour(i, child)\n",
     "      \n",
     "      for i in range(elitismOffset, newPopulation.populationSize()):\n",
+    "         # mutation   \n",
     "         self.mutate(newPopulation.getTour(i))\n",
     "      \n",
     "      return newPopulation\n",
@@ -244,6 +262,7 @@
     "   tourmanager = TourManager()\n",
     "   \n",
     "   # Create and add our cities\n",
+    "   # these two input numbers are (x,y) coordinates\n",
     "   city = City(60, 200)\n",
     "   tourmanager.addCity(city)\n",
     "   city2 = City(180, 200)\n",
