--- a/Decision_tree/HW6.ipynb
+++ b/Decision_tree/HW6.ipynb
@@ -45,16 +45,17 @@
     "\n",
     "print(X.shape)\n",
     "\n",
-    "\n",
+    "# TODO need a loop starts here to repeat the following operations\n",
+    "# at least 10 times\n",
     "\n",
     "# split X into training and testing sets\n",
     "# 30% for testing\n",
-    "X_train, X_test, y_train, y_test = train_test_split('''TODO''', random_state=0)\n",
+    "X_train, X_test, y_train, y_test = train_test_split('''TODO''')\n",
     "\n",
     "# TODO Tune parameters for RandomForestClassifier\n",
     "# TODO train and generate prediction\n",
     "\n",
-    "\n",
+    "# TODO the loop should stop here\n",
     "\n",
     "print('Accuracy: %.2f' % accuracy_score(y_test, y_pred))\n",
     "# This is what we want to improve: accuracy/number of features\n",
